# osiris_utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build_test.yml  ci.yml  publish.yml  python-publish.yml  release.yml
benchmarks/: benchmark_hdf5_io.py  benchmark_load_all.py
docs/source/: api.rst  conf.py  conference.rst  examples.rst  index.rst  sim_diag.rst
examples/: centered.ipynb  create_databases.py  create_db.sh  create_lorentz_database.py  edited-deck.1d  example.ipynb  example_Derivatives.ipynb  example_FFT.ipynb  example_InputDeck.ipynb  example_Simulation_Diagnostic.ipynb  example_data.ipynb  example_grid_data.ipynb  example_raw_tracks.ipynb  quick_start.ipynb  quick_start.py
examples/example_data/: file_tags.tags  run-info  thermal.1d
examples/files/: fld_ene  (+4 more)
osiris_utils/: __init__.py  analysis.py  anomalous_resistivity.py  data.py  data_jax.py  data_readers.py  gui.py  mean_field_theory.py  profiling.py  simulation_data.py  utils.py  utils_jax.py
osiris_utils.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_data.py  test_database_filters.py  test_decks.py  test_derivative_slicing.py  test_derivatives.py  test_field_centering.py  test_heatflux_correction.py  test_imports.py  test_mft.py  test_performance.py  test_postprocess.py  test_postprocessing.py  test_pressure_correction.py  test_raw.py  test_simulation.py  test_tracks.py  test_utils.py  test_version.py  test_vis.py
(+1589 files in other folders)
